# TheBartender

./: .gitignore  README.md  main.py
agents/: fundamentals_agent.py  news_agent.py  planner_agent.py  quant_agent.py  recommender_agent.py  watchlist_agent.py
backend/: config.yaml  pyproject.toml
backend/agents/: base_agent.py  driver_agent.py  fiscal_agent.py  news_agent.py  recommendation_agent.py  supervisor_agent.py  valuation_agent.py
backend/app/: config.py  main.py
backend/clients/: llm.py  news_api.py  provider_registry.py
backend/core/: usage_tracker.py
backend/docs/: bartender_system_design_v1.md
backend/models/: domain.py  outputs.py  requests.py
backend/notebooks/: test_finnhub.ipynb  test_llm.ipynb
backend/prompts/: driver_agent_prompts.py  fiscal_agent_prompts.py  news_agent_prompts.py  recommendation_agent_prompts.py  supervisor_agent_prompts.py  valuation_agent_prompts.py
backend/tests/: test_agents.py  test_llm_smoke.py
backend/tools/: filings_tools.py  market_data_tools.py  news_agent_tools.py  scoring_tools.py  valuation_agent_tools.py  web_search_tools.py
backend/workflows/: full_analysis.py  news.py  price_driver.py  recommendation.py  state.py  valuation.py
core/: agent_orchestrator.py  model_router.py
data/: watchlist.json
frontend/: chat.py
models/: base_model.py  claude_model.py  openai_model.py
notebooks/: demo_the_bartender.ipynb  demo_watchlist_agent.ipynb  test_openai_model.ipynb
tools/: fundamentals_data.py  indicators.py  market_data.py  news_fetcher.py
